--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>South Launceston 7249, TAS</p>
+								<p>Nerang 4211, QLD</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
